--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# Compile output
+out/
+release/
+debug/
+build/
+build-debug/
+build-release/
+
+# IDE files
+.vscode/
+
 # Prerequisites
 *.d
 
@@ -30,3 +41,5 @@
 *.exe
 *.out
 *.app
+/.vs
+*.pdb
