added string algorithms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,11 +86,12 @@ if(CMAKE_BUILD_TYPE STREQUAL "Release")
 endif()
 
 enable_testing()
-file(GLOB TEST_SOURCES LIST_DIRECTORIES false 
+file(GLOB TEST_SOURCES LIST_DIRECTORIES false
   ${PROJECT_SOURCE_DIR}/two-pointers/*.cpp
   ${PROJECT_SOURCE_DIR}/multithreading/*.cpp
   ${PROJECT_SOURCE_DIR}/sorting/*.cpp
   ${PROJECT_SOURCE_DIR}/math/*.cpp
+  ${PROJECT_SOURCE_DIR}/string/*.cpp
 )
 
 # Add source to this project's executable.
